--- a/_includes/components/footer.njk
+++ b/_includes/components/footer.njk
@@ -1,6 +1,5 @@
 <div class="flex-grid flex-grid--wrap flex-grid--col w-100 m-40 t-center">
     <small>
-        Built by <a href="https://bradleytaunt.com">Bradley Taunt</a> with &hearts;.
-        <br/>View the <a href="{{ pkg.repository.url }}">Github repo</a>.
+        Contact <a href="mailto:ianlavoie@yahoo.com">Ian Lavoie</a> ⛏️
     </small>
 </div>
