Added telephone and content update

--- a/_includes/components/footer.njk
+++ b/_includes/components/footer.njk
@@ -1,5 +1,6 @@
 <div class="flex-grid flex-grid--wrap flex-grid--col w-100 m-40 t-center">
     <small>
-        Contact <a href="mailto:ianlavoie@yahoo.com">Ian Lavoie</a> ⛏️
+        Contact <a href="mailto:ianlavoie@yahoo.com">Ian Lavoie</a> ⛏️<br>
+        ☎️ <a href="tel:413-977-8617">413-977-8617</a>
     </small>
 </div>
