Color scheme update and services offered

--- a/_includes/assets/css/inline.css
+++ b/_includes/assets/css/inline.css
@@ -1,6 +1,8 @@
 :root {
-	--brand-color: #ffe79a;
-	--link-color: #ef5a5a;
+	--brand-color: #659dbd;
+	--link-color: #ffffff;
+	/* --brand-color: #ffe79a;
+	--link-color: #ef5a5a; */
 }
 
 *, *:before, *:after {
