--- a/_includes/components/footer.njk
+++ b/_includes/components/footer.njk
@@ -1,6 +1,6 @@
-<div class="flex-grid flex-grid--wrap flex-grid--col w-100 m-40 t-center">
-    <small>
-        <b>Contact <a href="mailto:ianlavoie@yahoo.com">Ian Lavoie</a></b> ⛏️<br>
-        ☎️ <a href="tel:413-977-8617"><b>413-977-8617</b></a>
-    </small>
-</div>
+<footer class="flex-grid flex-grid--wrap flex-grid--col w-100 m-40 t-center">
+    <h4>Contact</h4>
+    <span>Ian Lavoie</span>
+    <a href="mailto:ianlavoie@yahoo.com">ian@ianlavoiedesigns.com</a>
+    <span>☎️ <a href="tel:413-977-8617">413-977-8617</a></span>
+</footer>
