--- a/_includes/components/footer.njk
+++ b/_includes/components/footer.njk
@@ -1,6 +1,6 @@
-<footer class="flex-grid flex-grid--wrap flex-grid--col w-100 m-40 t-center">
-    <h4>Contact</h4>
-    <span>Ian Lavoie</span>
-    <span>✉️ <a href="mailto:ianlavoie@yahoo.com">ian@ianlavoiedesigns.com</a></span>
-    <span>☎️ <a href="tel:413-977-8617">413-977-8617</a></span>
+<footer class="h-card flex-grid flex-grid--wrap flex-grid--col w-100 m-40 t-center">
+    <span class="small">Contact</span>
+    <span class="p-name">Ian Lavoie</span>
+    <span class="u-email">✉️ <a href="mailto:ian@ianlavoiedesigns.com">ian@ianlavoiedesigns.com</a></span>
+    <span class="u-url">☎️ <a href="tel:413-977-8617">413-977-8617</a></span>
 </footer>
