--- a/_includes/assets/css/inline.css
+++ b/_includes/assets/css/inline.css
@@ -1,8 +1,6 @@
 :root {
 	--brand-color: #639a67;
 	--link-color: #ffffff;
-	/* --brand-color: #ffe79a;
-	--link-color: #ef5a5a; */
 }
 
 *, *:before, *:after {
@@ -78,7 +76,7 @@ ul,ol {
 }
 
 figure {
-	margin: 0 0 10px 0;
+	margin: 0;
 }
 
 pre {
@@ -114,8 +112,13 @@ footer {
 footer h5 {
 	margin-bottom: 0.2em;
 }
+
 footer .p-name {
 	font-size: 1.1em;
+}
+
+.dark {
+	color: #2d2d2d;
 }
 
 /* The Grid(s) */
