--- a/_includes/assets/css/inline.css
+++ b/_includes/assets/css/inline.css
@@ -191,14 +191,17 @@ footer .p-name {
 
 /* Lightbox effect */
 .lightbox {
-	visibility: hidden;
+	background: rgba(0,0,0,0.8);
+	display: flex;
+	height: 100vh;
 	opacity: 0;
 	position: fixed;
-	z-index: 1;
 	top: 0;
-	background: #2d2d2d;
 	transform: scale(0.5);
 	transition: all 0.3s ease-in;
+	visibility: hidden;
+	z-index: 1;
+    align-items: center;
 }
 
 .lightbox:target {
