--- a/_includes/assets/css/inline.css
+++ b/_includes/assets/css/inline.css
@@ -201,7 +201,8 @@ footer .p-name {
 	transition: all 0.3s ease-in;
 	visibility: hidden;
 	z-index: 1;
-    align-items: center;
+	align-items: center;
+	text-align: center;
 }
 
 .lightbox:target {
@@ -358,10 +359,6 @@ button {
 
 	.p-60 {
 		padding: 0 20px;
-	}
-
-	nav ul li {
-		font-size: 16px;
 	}
 
 	.flex-break {
